# clef

./: .codeclimate.yml  .gitignore  .landscape.yml  .readthedocs.yaml  .travis.yml  AUTHORS  Makefile  README.rst  Vagrantfile  conftest.py  docker-compose.yml  requirements.txt  setup.cfg
.circleci/: config.yml
arccssive2/: cli.py  db.py  esgf.py  git_keyring.py  model.py  model_cmip6.py  pgvalues.py
clef/: api.py  cli.py  code.py  collections.py  cordex.py  dataset.py  db.py  db_noesgf.py  download.py  esdoc.py  esgf.py  exception.py  export.py  helpers.py  model.py  pgvalues.py  populate_variables.py  request.py  update_collections.py  update_variables.py
clef/data/: CMIP5_model_fix.json  CMIP5_validation.json  CMIP6_source_id.json  CMIP6_validation.json  CMIP6_variable_id.json  CORDEX_validation.json  drs.json  facets.json  valid_keys.json
conda/: dev-environment.yml  meta.yaml  run_test_coverage.sh
db/: CMIP5_validation.json  CMIP6_validation.json  attributes_map.json  checksums_sample.txt  drs_cmip6.csv  facets.json  metadata_sample.txt  nci.sql  paths_sample.txt  paths_ua6_sample.txt  refresh.sql  sample_al33_metadata.txt  sample_al33_paths.txt  sample_oi10_metadata.txt  sample_oi10_paths.txt  sample_rr3_metadata.txt  sample_rr3_paths.txt  tables.sql
docs/: Makefile  architecture.rst  clef_demo.ipynb  clef_demo.rst  code.rst  conf.py  ds.rst  esgf.rst  gettingstarted.rst  index.rst  new_features.rst  queries.rst  training.rst  training1.rst  training2.rst  training3.rst  training4.rst  training5.rst  training6.rst
docs/api/: api.rst  db.rst  esgf.rst  model.rst
test/: clefdb_fixtures.py  code_fixtures.py  conftest.py  download_fixtures.py  esdoc_fixtures.py  test_cli.py  test_code.py  test_cordex.py  test_db.py  test_db_noesgf.py  test_download.py  test_esdoc.py  test_esgf.py  test_helpers.py  test_model.py  test_nci.py  test_production.py
