[metadata]
name = clef
version = 1.4.4
author = Scott Wales, Paola Petrelli
author_email = scott.wales@unimelb.edu.au, paola.petrelli@utas.edu.au
summary = 'CleF queries ESGF data at NCI' 
description_file = README.rst
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
# ...
packages = find:
package_dir =
    = . 

[options.packages.find]
where = clef

[options.package_data]
data =
    *.json

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    conftest.py
    test

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx

[entry_points]
console_scripts =
    clef = clef.cli:clef_catch

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py
